# jucipp

./: .appveyor.yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: api.md  custom_styling.md  install.md  language_servers.md  plugins.md
share/cmake_modules/: FindPlantuml.cmake
src/: CMakeLists.txt  autocomplete.cc  autocomplete.cpp  autocomplete.h  autocomplete.hpp  cmake.cc  cmake.cpp  cmake.hpp  commands.cpp  commands.hpp  compile_commands.cc  compile_commands.cpp  compile_commands.h  compile_commands.hpp  config.cc  config.cpp  config.h  config.hpp  config_module.cc  ctags.cc  ctags.cpp  ctags.h  ctags.hpp  debug_lldb.cc  debug_lldb.cpp  debug_lldb.h  debug_lldb.hpp  dialog.cpp  dialog.hpp  dialogs.cc  dialogs.cpp  dialogs.hpp  dialogs_unix.cpp  dialogs_win.cpp  directories.cc  directories.cpp  directories.h  directories.hpp  dispatcher.cc  dispatcher.cpp  (+111 more)
tests/: CMakeLists.txt  cmake_build_test.cpp  compile_commands_test.cc  compile_commands_test.cpp  ctags_grep_test.cc  ctags_grep_test.cpp  filesystem_test.cc  filesystem_test.cpp  git_test.cpp  json_test.cpp  language_protocol_client_test.cpp  language_protocol_server_test.cpp  lldb_test.cc  lldb_test.cpp  meson_build_test.cpp  process_test.cpp  python_interpreter_test.cc  source_clang_test.cc  source_clang_test.cpp  source_generic_test.cc  source_generic_test.cpp  source_key_test.cc  source_key_test.cpp  source_test.cc  source_test.cpp  terminal_test.cc  terminal_test.cpp  tooltips_test.cc  tooltips_test.cpp  usages_clang_test.cc  usages_clang_test.cpp  utility_test.cpp
tests/fuzzers/: README.md  cmake.cpp  ctags.cpp  docstring.cpp  doxygen.cpp  grep.cpp  markdown.cpp
tests/language_protocol_test_files/: main.rs
tests/lldb_test_files/: CMakeLists.txt
tests/python_bindings/: CMakeLists.txt  jucipp_test.py  test_suite.cc  test_suite.h
tests/python_bindings/CMake_tests/: cmake_test.cc  cmake_test.py
tests/python_bindings/CMake_tests/cmake_project/: CMakeLists.txt
tests/python_bindings/CompileCommands_tests/: compile_commands_test.cc  compile_commands_test.py
tests/python_bindings/Config_tests/: config_test.cc  config_test.py
tests/python_bindings/Ctags_tests/: ctags_test.cc  ctags_test.py
tests/python_bindings/Debug_lldb_tests/: debug_lldb_test.cc  debug_lldb_test.py
tests/python_bindings/PythonInterpreter_tests/: interpreter_test.cc
tests/python_bindings/PythonModule_tests/: python_module_test.cc  python_module_test.py
tests/python_bindings/Terminal_tests/: terminal_test.cc  terminal_test.py
tests/python_bindings/cmake_project/: CMakeLists.txt
tests/python_interpreter_test_files/: terminal_test.py
tests/stubs/: config.cc  config.cpp  dialog.cpp  dialogs.cpp  directories.cpp  info.cpp  notebook.cc  notebook.cpp  plugins.cc  project.cpp  selection_dialog.cpp  tooltips.cc
